# Group_Algebra

./: .pylintrc  README.md  elment.py  pyproject.toml  run.py
.github/workflows/: pylint.yml
src/: common.py  dihedral_group.py  function.py  group.py  subgroup.py
tests/: dihedral_group_test.py
